fix dome align

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -182,6 +182,17 @@ figure :not(:last-child) {
 .numbers-wrapper .bg-light {
   width: 99.7rem;
 }
+
+.form-floating {
+  margin-top: 5.7rem;
+}
+
+.contact-divider-wrapper {
+  margin-top: 3.2rem;
+}
+// .form-floating textarea {
+//   margin-top: ;
+// }
 // .project-card {
 //   width: 45rem;
 //   height: 16.6rem;
